<resources>
    <string name="app_name">木斗生活</string>
    <string name="bottom_mu_dou_worker">木斗工匠</string>
    <string name="bottom_mu_dou_shanghu">木斗商户</string>
    <string name="bottom_mu_dou_subscription">订金商户</string>
    <string name="bottom_mu_dou_express">木斗速递</string>
    <string name="bottom_mu_dou_carry">木斗搬运</string>
    <string name="top_order">订单</string>
    <string name="after_sale">售后</string>
    <string name="complaint">投诉</string>
    <string name="handler">处理</string>
    <string name="details">详情</string>
    <string name="top_mine">我的</string>
    <string name="in_out">收支</string>
    <string name="ming_xi">明细</string>
    <string name="jie_kuan">结款</string>
    <string name="personal">个人</string>
    <string name="information">信息</string>
    <string name="cancel_order">取消订单</string>
    <string name="order_receive">接单</string>
    <string name="left_order">订单</string>
    <string name="look">查看</string>
    <string name="left_price">报价</string>
    <string name="get_goods">取货</string>
    <string name="service">服务</string>
    <string name="custom_make">定制</string>
    <string name="complete">完成</string>
    <string name="delivery">交付</string>
    <string name="left_account">结算</string>
    <string name="order_number">订单编号:</string>
    <string name="accept_order">可接单</string>
    <string name="received">已接单</string>
    <string name="agree_offer_price">客户同意报价</string>
    <string name="servicing">服务中</string>
    <string name="checked">客户已验收</string>
    <string name="confirm_receive_goods">客户确认收货</string>
    <string name="checked_goods">客户验收货物</string>
    <string name="mu_dou_express_yet_take_goods">木斗速递已取货</string>
    <string name="commit_price">上传报价</string>
    <string name="start_service">开始服务</string>
    <string name="yet_take_goods">已取货</string>
    <string name="start_make">开始制作</string>
    <string name="delivery_goods">交付货物</string>
    <string name="already_delivery">已交付</string>
    <string name="wait_price">待报价</string>
    <string name="commit">上传</string>
    <string name="commit_1">1.点击加号进入人工库</string>
    <string name="commit_2">2.根据所需材料勾选价格</string>
    <string name="commit_1_express">1.点击加号进入价格库</string>
    <string name="commit_2_express">2.根据超出距离勾选价格</string>
    <string name="choose_project">选择方案</string>
    <string name="user_remark">客户备注</string>
    <string name="apply_close_account">申请结算</string>
    <string name="finish_service">完成服务</string>
    <string name="quickly_handle">立即处理</string>
    <string name="finish_handle">处理完成</string>
    <string name="sure_deliver">确认交付</string>
    <string name="apply_settle">申请结算</string>
    <string name="wait_handle">待处理</string>
    <string name="yet_handle">已处理</string>
    <string name="standard">规格</string>
    <string name="number">数量</string>
    <string name="out_of_range">超出</string>
    <string name="out_of_km">超出公里数</string>
    <string name="out_of_5">超出5公里</string>
    <string name="createTime">时间</string>
    <string name="customer_name">客户姓名:</string>
    <string name="store_name">商户名称:</string>
    <string name="shang_hu_address">商户地址:</string>
    <string name="user_address">客户地址:</string>
    <string name="contact_information">联系方式:</string>
    <string name="appointment_time">预约时间:</string>
    <string name="material_content">材料内容</string>
    <string name="user_not_accept">客户未验收</string>
    <string name="user_accept">客户已验收</string>
    <string name="price">价格</string>
    <string name="express_info">木斗速递信息</string>
    <string name="store_address">店铺地址</string>
    <string name="material_name">名称</string>
    <string name="sure_receive">确认接单</string>
    <string name="string_sure">确定</string>
    <string name="string_cancel">取消</string>
    <string name="receive_dialog_tittle">您确定要取消该订单吗?</string>
    <string name="already_choose_project">已选方案</string>
    <string name="car_model">车型</string>
    <string name="starting_price">起步价</string>
    <string name="out_of_price">超出价</string>
    <string name="per_price">单价</string>
    <string name="floor">楼层(楼梯)</string>
    <string name="technology_service_type">技术服务类</string>
    <string name="material_type">配件类</string>
    <string name="total">合计 ￥</string>
    <string name="library_worker_service_item_1">补漏疏通</string>
    <string name="library_worker_service_item_2">水路电路</string>
    <string name="library_worker_service_item_3">门窗锁具</string>
    <string name="library_worker_service_item_4">安装拆卸</string>
    <string name="library_worker_service_item_5">保洁清洗</string>
    <string name="library_worker_service_item_6">搬家搬运</string>
    <string name="library_worker_service_item_7">生活维修</string>
    <string name="library_worker_service_item_8">装修改造</string>

    <string name="library_worker_material_item_1">五金建材</string>
    <string name="library_worker_material_item_2">水暖材料</string>
    <string name="library_worker_material_item_3">电工电料</string>
    <string name="library_worker_material_item_4">厨房卫浴</string>
    <string name="library_worker_material_item_5">灯饰材料</string>
    <string name="library_worker_material_item_6">墙地材料</string>
    <string name="library_worker_material_item_7">门窗锁具</string>
    <string name="library_worker_material_item_8">装修建材</string>

    <string name="library_express_item_1">三轮车</string>
    <string name="library_express_item_2">面包车</string>
    <string name="library_express_item_3">金杯车</string>
    <string name="library_express_item_4">小型平板</string>

    <string name="library_carry_item_1">楼梯</string>
    <string name="library_carry_item_2">电梯</string>

    <string name="library_subscription_item_1">定金材料</string>
    <string name="search">搜索</string>
    <string name="reduce">减</string>
    <string name="add">加</string>
    <string name="close">关闭</string>
    <string name="back">返回</string>
    <string name="library">库</string>
    <string name="selected_list">已选列表</string>
    <string name="server_content">服务内容:</string>
    <string name="after_sale_reason">售后原因</string>
    <string name="specific_desc">具体内容</string>
    <string name="star">五角星</string>
    <string name="vary_bad">非常差</string>
    <string name="complaint_reason">木斗客服:由于您的服务态度极差被客户投诉</string>
    <string name="this_month_income">本月收入</string>
    <string name="history_income">历史信息查看</string>
    <string name="deal_success">交易成功</string>
    <string name="payment_way">付款方式</string>
    <string name="order_no">订单编号</string>
    <string name="deal_object">交易对象</string>
    <string name="trans_time">转账时间</string>
    <string name="receive_time">收款时间</string>
    <string name="user_name">用户名</string>
    <string name="password">账号密码</string>
    <string name="phone">手机号</string>
    <string name="amend">修改</string>
    <string name="unbind">解绑</string>
    <string name="weixin_account">微信账号</string>
    <string name="logout">注销账号</string>
    <string name="logout_message">注销后无法恢复，请谨慎操作</string>
    <string name="avatar">头像</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="use_phone_login">使用手机登录</string>
    <string name="use_password_login">使用账号密码登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="click_send">点击发送验证码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="name">姓名</string>
    <string name="input_id">请输入身份证号</string>
    <string name="input_code">请输入验证码</string>
    <string name="sure_password">请确认密码</string>
    <string name="choose">请选择</string>
    <string name="bian_hao">编号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
