<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/left_item_container"
        >
        <Button
            android:id="@+id/left_item_1"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_1"
            />
        <Button
            android:id="@+id/left_item_2"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_2"
            />
        <Button
            android:id="@+id/left_item_3"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_3"
            />
        <Button
            android:id="@+id/left_item_4"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_4"
            />
        <Button
            android:id="@+id/left_item_5"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_5"
            />
        <Button
            android:id="@+id/left_item_6"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_6"
            />
        <Button
            android:id="@+id/left_item_7"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_7"
            />
        <Button
            android:id="@+id/left_item_8"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_8"
            />
        <Button
            android:id="@+id/left_item_9"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_8"
            />
        <Button
            android:id="@+id/left_item_10"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_8"
            />
        <Button
            android:id="@+id/left_item_11"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_8"
            />
        <Button
            android:id="@+id/left_item_12"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_8"
            />
        <Button
            android:id="@+id/left_item_13"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_8"
            />
        <Button
            android:id="@+id/left_item_14"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_8"
            />
        <Button
            android:id="@+id/left_item_15"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_8"
            />
        <Button
            android:id="@+id/left_item_16"
            style="@style/library_left_item"
            android:text="@string/library_worker_service_item_8"
            />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>