<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:id="@+id/label_item_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bian_hao"
        android:textColor="@color/color_000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/label_item_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/material_name"
        android:textColor="@color/color_000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/label_item_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/color_000000"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/label_item_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@color/color_000000"
        android:textSize="14sp"
        />

</LinearLayout>
