<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/content_recycler_container"
    android:paddingTop="8dp"
    android:paddingBottom="4dp"
    >
    <TextView
        android:id="@+id/order_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_666666"
        android:textSize="13sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:text="@string/order_number" />

    <TextView
        android:id="@+id/order_number_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/order_text_id"
        android:textColor="@color/color_666666"
        android:textSize="13sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:text="BF00000000000" />

    <TextView
        android:id="@+id/order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/accept_order"
        android:textSize="13sp"
        android:textColor="@color/color_fec300"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        />
    <ImageView
        android:id="@+id/img_id"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_below="@id/order_text_id"
        android:src="@mipmap/default_img"
        android:layout_marginTop="3dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="8dp"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_text_id"
        android:layout_toEndOf="@id/img_id"
        android:layout_alignTop="@id/img_id"
        android:layout_alignBottom="@id/img_id"
        android:id="@+id/item_text_container"
        android:layout_marginStart="21dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="24dp"
        >
        <TextView
            android:id="@+id/item_value_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:textSize="13sp"
            android:text="@string/material_name"
            />
        <TextView
            android:id="@+id/item_name_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:textSize="13sp"
            android:text="@string/standard"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/item_value_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/item_name_2"
            android:textColor="@color/color_666666"
            android:textSize="13sp"
            android:layout_alignParentEnd="true"
            android:text="@string/standard"
            android:layout_centerVertical="true"
            android:gravity="end"
            />
        <TextView
            android:id="@+id/item_name_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:textSize="13sp"
            android:text="@string/number"
            android:layout_alignParentBottom="true"
            />
        <TextView
            android:id="@+id/item_value_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/item_name_3"
            android:textColor="@color/color_666666"
            android:textSize="13sp"
            android:layout_alignParentBottom="true"
            android:text="@string/number"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/item_name_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_text_container"
        android:layout_toEndOf="@id/img_id"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/color_666666"
        android:textSize="13sp"
        android:text="@string/createTime"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/item_value_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_text_container"
        android:layout_toEndOf="@id/item_name_4"
        android:layout_marginTop="16dp"
        android:textColor="@color/color_666666"
        android:textSize="13sp"
        android:text="@string/createTime"
        android:layout_alignEnd="@id/item_text_container"
        android:gravity="end"
        android:visibility="gone"
        />

    <Button
        style="@style/recycler_item_button"
        android:id="@+id/button_right"
        android:layout_alignParentEnd="true"
        android:text="@string/finish_handle"
        android:background="@drawable/clickable_button_bg"
        android:layout_marginEnd="8dp"
        />

    <Button
        style="@style/recycler_item_button"
        android:id="@+id/button_left"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@id/button_right"
        android:text="@string/quickly_handle"
        android:background="@drawable/un_clickable_button_bg"
        />

</RelativeLayout>