<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/receive_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:paddingBottom="16dp">

    <Button
        android:id="@+id/sure_btn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/clickable_button_bg"
        android:text="@string/sure_deliver"
        android:textColor="@color/color_ffffff" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/sure_btn"
        android:layout_marginBottom="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/close_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/close"
                android:src="@mipmap/close_img" />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/customer_name"
                android:textColor="@color/color_666666" />

            <TextView
                android:id="@+id/content_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_toEndOf="@id/name_text"
                android:text="hello"
                android:textColor="@color/color_666666" />

            <TextView
                android:id="@+id/address_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_text"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/user_address"
                android:textColor="@color/color_666666" />

            <TextView
                android:id="@+id/address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_text"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/address_name"
                android:text="TextView"
                android:textColor="@color/color_666666" />

            <TextView
                android:id="@+id/phone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/contact_information"
                android:textColor="@color/color_666666" />

            <TextView
                android:id="@+id/phone_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/phone_name"
                android:text="TextView"
                android:textColor="@color/color_666666" />

            <TextView
                android:id="@+id/appoint_time_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/appointment_time"
                android:textColor="@color/color_666666" />

            <TextView
                android:id="@+id/appoint_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/appoint_time_name"
                android:text="TextView"
                android:textColor="@color/color_666666" />
            <TextView
                android:id="@+id/user_remark"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/appoint_time_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/edit_text_box_bg"
                android:gravity="center"
                android:text="@string/user_remark"
                android:textColorHint="@color/color_999999" />

            <View
                android:id="@+id/remark_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/user_remark"
                android:layout_marginTop="12dp"
                android:background="@color/color_999999" />

            <TextView
                android:id="@+id/service_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/remark_line"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/server_content"
                android:textColor="@color/color_666666" />

            <TextView
                android:id="@+id/service_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/remark_line"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/phone_name"
                android:text="TextView"
                android:textColor="@color/color_666666" />

            <View
                android:id="@+id/service_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/service_value"
                android:layout_marginTop="12dp"
                android:background="@color/color_999999" />

            <TextView
                android:id="@+id/after_sale_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/service_line"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/after_sale_reason"
                android:textColor="@color/color_666666" />
            <TextView
                android:id="@+id/specific_desc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/after_sale_reason"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/edit_text_box_bg"
                android:gravity="center"
                android:text="@string/specific_desc"
                android:textColorHint="@color/color_999999" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>