<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <TextView
        android:id="@+id/content_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/material_name"
        android:textColor="@color/color_000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/content_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/color_000000"
        android:textSize="14sp" />

    <include
        android:id="@+id/content_3_container"
        layout="@layout/layout_number_caculate"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/content_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@color/color_000000"
        android:textSize="14sp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/content_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@color/color_000000"
        android:textSize="14sp"
        android:visibility="gone"
        />

    <include
        android:id="@+id/content_4_container"
        layout="@layout/layout_floor_caculate"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone" />
</LinearLayout>
